<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:background="@android:color/transparent">

    <!-- Outer container for popup -->
    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="700dp"
        android:orientation="vertical"
        android:background="@drawable/rounded_background"
        android:gravity="center_horizontal"
        android:padding="20dp">

        <!-- Scrollable content -->
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:layout_gravity="center"
                    android:text="@string/example_text"
                    android:textColor="#ffff"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Cybercrime refers to criminal activities carried out using computers and the internet. This includes online scams, data theft, malware attacks, and financial fraud..."
                    android:textSize="14sp"
                    android:textColor="#B4B1B1" />

                <TextView
                    android:id="@+id/section1Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/example_text2"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/section1Description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:text="Cyber fraud means cheating people using the internet, computers, or mobile phones. In India, cases of online scams have increased a lot because more people now use digital payments, online shopping, and social media. The good news? If you understand how these frauds work, you can easily protect yourself."
                    android:textColor="#B4AFAF"
                    android:textSize="14sp" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="22dp"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/rounded_background5"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <!-- FAQ Items -->



                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_marginTop="4dp"
                            android:background="@drawable/rounded_background"
                            android:paddingEnd="12dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="10dp"
                                android:textColor="@color/white"
                                android:layout_marginTop="5dp"
                                android:text="Phishing (Fake Messages or Emails)"
                                android:textSize="16dp">

                            </TextView>

                            <ImageView
                                android:id="@+id/plus_icon1"
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:layout_alignParentEnd="true"
                                android:layout_centerVertical="true"
                                android:contentDescription="Plus icon"
                                android:padding="4dp"
                                android:src="@drawable/add_sharp"
                                android:tint="#ffff" />
                        </RelativeLayout>

                        <TextView
                            android:id="@+id/faq1_answer"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Scammers send fake emails, SMS, or WhatsApp messages pretending to be from banks, government offices, or companies. They ask for your personal details like ATM PIN, OTP, or Aadhaar number."
                            android:visibility="gone"
                            android:padding="8dp" />




                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="57dp"
                            android:layout_marginTop="8dp"
                            android:background="@drawable/rounded_background"
                            android:paddingEnd="12dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="10dp"
                                android:textColor="@color/white"
                                android:layout_marginTop="15dp"
                                android:text="@string/example_text3"
                                android:textSize="16dp">

                            </TextView>

                            <ImageView
                                android:id="@+id/plus_icon2"
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:layout_alignParentEnd="true"
                                android:layout_centerVertical="true"
                                android:contentDescription="Plus icon"
                                android:padding="4dp"
                                android:src="@drawable/add_sharp"
                                android:tint="#ffff" />
                        </RelativeLayout>

                        <TextView
                            android:id="@+id/faq2_answer"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Someone pretends to buy your product on OLX and says, “I’ll send you money, just enter your UPI PIN to receive it.”Truth: You never need to enter a PIN to receive money. Entering it actually sends money to them."
                            android:visibility="gone"
                            android:padding="8dp" />

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="57dp"
                            android:layout_marginTop="8dp"
                            android:background="@drawable/rounded_background"
                            android:paddingEnd="12dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="10dp"
                                android:textColor="@color/white"
                                android:layout_marginTop="15dp"
                                android:text="Online Shopping Frauds"
                                android:textSize="16dp">

                            </TextView>

                            <ImageView
                                android:id="@+id/plus_icon3"
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:layout_alignParentEnd="true"
                                android:layout_centerVertical="true"
                                android:contentDescription="Plus icon"
                                android:padding="4dp"
                                android:src="@drawable/add_sharp"
                                android:tint="#ffff" />
                        </RelativeLayout>

                        <TextView
                            android:id="@+id/faq3_answer"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Fraud websites or sellers take your money but never deliver products.\nExample:\nA site shows a branded phone at half price. You pay in advance, but the phone never arrives.\nHow to stay safe:\nShop only from trusted websites.Check reviews before paying online."
                            android:visibility="gone"
                            android:padding="8dp" />

                    </LinearLayout>

                <TextView
                    android:id="@+id/section1Title2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="16dp"
                    android:text="2. Crimes using computer networks to commit other criminal activities"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/section1Description2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/example_text4"
                    android:textColor="#B4AFAF"
                    android:textSize="14sp" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="22dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/rounded_background5"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <!-- FAQ Items -->



                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/rounded_background"
                        android:paddingEnd="12dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="15dp"
                            android:textColor="@color/white"
                            android:layout_marginTop="15dp"
                            android:text="Malware Attacks"
                            android:textSize="16dp">

                        </TextView>

                        <ImageView
                            android:id="@+id/plus_icon4"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:contentDescription="Plus icon"
                            android:padding="4dp"
                            android:src="@drawable/add_sharp"
                            android:tint="#ffff" />
                    </RelativeLayout>

                    <TextView
                        android:id="@+id/faq4_answer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="A malware attack involves using malicious software (malware) to harm a computer or network. This software can steal private data, disrupt system functions, or take control of the infected device without the user's knowledge. It's a common type of cybercrime that aims to cause damage or gain unauthorized access."
                        android:visibility="gone"
                        android:padding="8dp" />




                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="57dp"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/rounded_background"
                        android:paddingEnd="12dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="13dp"
                            android:textColor="@color/white"
                            android:layout_marginTop="15dp"
                            android:text="@string/example_text5"
                            android:textSize="16dp">

                        </TextView>

                        <ImageView
                            android:id="@+id/plus_icon5"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:contentDescription="Plus icon"
                            android:padding="4dp"
                            android:src="@drawable/add_sharp"
                            android:tint="#ffff" />
                    </RelativeLayout>

                    <TextView
                        android:id="@+id/faq5_answer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="A Denial-of-Service (DoS) attack is a cybercrime that floods a network or website with so much traffic that it overwhelms the system, making it inaccessible to legitimate users. The attack doesn't steal data but instead focuses on preventing a service from working correctly. Think of it like a mob of people blocking the entrance to a store, preventing real customers from getting in."
                        android:visibility="gone"
                        android:padding="8dp" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="57dp"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/rounded_background"
                        android:paddingEnd="12dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:textColor="@color/white"
                            android:layout_marginTop="15dp"
                            android:text="Identity Theft:"
                            android:textSize="16dp">

                        </TextView>

                        <ImageView
                            android:id="@+id/plus_icon6"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:contentDescription="Plus icon"
                            android:padding="4dp"
                            android:src="@drawable/add_sharp"
                            android:tint="#ffff" />
                    </RelativeLayout>

                    <TextView
                        android:id="@+id/faq6_answer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="This crime involves stealing a person's private information to impersonate them. The criminal then uses this information to commit fraud, make purchases, or open new accounts in the victim's name."
                        android:visibility="gone"
                        android:padding="8dp" />

                </LinearLayout>


                <com.denzcoskun.imageslider.ImageSlider
                    android:layout_width="match_parent"
                    android:layout_height="220dp"
                    android:layout_marginTop="15dp"
                    android:id="@+id/imageSlider"
                    app:iss_period="1000"
                    app:iss_auto_cycle="true"
                    app:iss_delay="1000"
                    app:iss_corner_radius="20"
                    app:iss_title_background="@drawable/rounded_background"/>





            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>
